# monadic-breakout

./: Dockerfile  README.md  build.sh  monadic-breakout.cabal  package.yaml  run.sh
app/: Main.hs
assets/levels/: level1.txt  level2.txt  level3.txt
src/: Game.hs  Initialize.hs  Lib.hs
test/: Spec.hs
