cabal-version: 1.12

name:           monadic-breakout
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      Game
      Initialize
      Lib
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , gloss
  default-language: Haskell2010

executable monadic-breakout-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers
    , monadic-breakout
    , gloss
  default-language: Haskell2010

test-suite monadic-breakout-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers
    , monadic-breakout
    , gloss
  default-language: Haskell2010
